# direct-to-mx

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: dkim.rs  dns.rs  error.rs  lib.rs  send.rs
tests/: unit.rs
